--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <script type="module">
     import confetti from 'https://cdn.skypack.dev/canvas-confetti';
-    const OKayButton = document.getElementById('OkayButton');
+    const okayButton = document.getElementById('OkayButton');
     const noButton = document.getElementById('noButton');
     const valentineQuestion = document.getElementById('valentineQuestion');
     const responseButtons = document.getElementById('responseButtons');
@@ -58,23 +58,38 @@
     let buttonHeight = 48; // Starting height in pixels
     let buttonWidth = 80;
     let fontSize = 20; // Starting font size in pixels
+    let isFinalNo = false; // Flag to check if the final "No :(" is displayed
+  
+    const noButtonTexts = [
+      "No", "Are you sure?", "Serious ah va?", "Think again!",
+      "Enakku vera yaru irukanga!", "please", "Ego va ahhh",
+      "Please purinjiko!", "Adingu", "You're breaking my heart :(",
+      "Pookie please", "Don't do this to me :(", "pretty please",
+      "i am going to die", "yup im dead", "un vettuku vanthuduvan",
+      "I'm gonna cry...", "No :("
+    ];
   
     noButton.addEventListener('click', function() {
-      if (noClickCount < 999) {
-        noClickCount++;
-        buttonHeight += 25; // Increase height by 25px on each click
-        buttonWidth += 25;
-        fontSize += 10; // Increase font size by 10px on each click
-        OkayButton.style.height = `${buttonHeight}px`; // Update button height
-        OkayButton.style.width = `${buttonWidth}px`;
-        OkayButton.style.fontSize = `${fontSize}px`; // Update font size
-        if (noClickCount < 999) {
-          noButton.textContent = ["No", "Are you sure?", "Serious ah va?", "Think again!", "Enakku vera yaru irukanga!", "please", "Ego va ahhh", "Please purinjiko!", "Adingu ", "You're breaking my heart :(", "Pookie please", "Don't do this to me :(", "pretty please", "i am going to die", "yup im dead", "un vettuku vanthuduvan", "No :(", "I'm gonna cry..."][noClickCount];
+      if (!isFinalNo) {
+        if (noClickCount < noButtonTexts.length) {
+          noClickCount++;
+          buttonHeight += 15; // Increase height by 25px on each click
+          buttonWidth += 15;  // Increase width by 25px on each click
+          fontSize += 5;     // Increase font size by 10px on each click
+          okayButton.style.height = `${buttonHeight}px`; // Update button height
+          okayButton.style.width = `${buttonWidth}px`;   // Update button width
+          okayButton.style.fontSize = `${fontSize}px`;   // Update font size
+          
+          // Update the text content of the "No" button with the current option
+          noButton.textContent = noButtonTexts[noClickCount - 1];
+        } else {
+          noButton.textContent = "No :("; // Display "No :(" after all options
+          isFinalNo = true; // Set flag to true to indicate final state
         }
       }
     });
   
-    OkayButton.addEventListener('click', () => {
+    okayButton.addEventListener('click', () => {
       valentineQuestion.textContent = "ok Yayyy!! :3"; // Change the question text
       responseButtons.style.display = 'none'; // Hide both buttons
       confetti(); // Trigger confetti animation
